refactor: updated deprecations